syntax = "proto3";

package images;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/images/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateImageFromSnapshotRequest {
    string SrcSnapshotId = 1;
    string DstImageId = 2;
    string FolderId = 3;
    string OperationCloudId = 4;
    string OperationFolderId = 5;
    repeated types.DiskPool DiskPools = 6;
    bool UseDataplaneTasksForLegacySnapshots = 7;
    bool UseS3 = 8;
}

message CreateImageFromSnapshotTaskState {
    int64 Offset = 2;
    double Progress = 3;
    int64 ImageSize = 4;
    int64 ImageStorageSize = 5;
    string DataplaneTaskID = 6;
}
